--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,23 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.thymeleaf.cache: false
 spring.thymeleaf.mode: html
+
+
+security.basic.authorize-mode=role
+security.basic.enabled=true
+security.basic.path=/**
+security.basic.realm=Spring
+security.enable-csrf=false
+security.filter-order=0
+security.filter-dispatcher-types=ASYNC, FORWARD, INCLUDE, REQUEST
+security.headers.cache=true
+security.headers.content-type=true
+security.headers.frame=true
+security.headers.hsts=
+security.headers.xss=true
+security.ignored= 
+security.require-ssl=false
+security.sessions=if_required
+security.user.name=user
+security.user.password=pwd
+security.user.role=USER
